avoid jump when focusing on the name in the tools dashboard

--- a/src/tools/dashboard/components/styles/Dashboard.scss
+++ b/src/tools/dashboard/components/styles/Dashboard.scss
@@ -64,6 +64,10 @@
         margin: 0;
         overflow: scroll;
         flex: 1;
+
+        &:not(:focus) {
+          border: solid 1px transparent;
+        }
       }
 
       & svg {
